--- a/VhallAndroidSDKLiveDemo/app/src/main/res/layout/splash_activity.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/layout/splash_activity.xml
@@ -8,7 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/u37" />
+        android:layout_marginTop="80dp"
+        android:src="@drawable/icon_vhall" />
 
     <TextView
         android:layout_width="wrap_content"
