--- a/VhallAndroidSDKLiveDemo/app/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/layout/watch_activity.xml
@@ -25,8 +25,10 @@
 
             <RadioButton
                 android:id="@+id/rb_doc"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_radiobutton_selector"
                 android:button="@null"
                 android:checked="true"
                 android:gravity="center"
@@ -38,32 +40,38 @@
 
             <RadioButton
                 android:id="@+id/rb_chat"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_radiobutton_selector"
                 android:button="@null"
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="聊天"
                 android:textColor="@drawable/tabs_color_selector"
                 android:textSize="15dp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <RadioButton
                 android:id="@+id/rb_question"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_radiobutton_selector"
                 android:button="@null"
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="问答"
                 android:textColor="@drawable/tabs_color_selector"
                 android:textSize="15dp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <RadioButton
                 android:id="@+id/rb_detail"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_radiobutton_selector"
                 android:button="@null"
                 android:gravity="center"
                 android:padding="10dp"
