--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -11,5 +11,10 @@
         android:layout_height="match_parent"
         android:scaleType="fitCenter" />
 
+    <com.vhall.uilibs.util.WhiteBoardView
+        android:id="@+id/board"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
