--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
@@ -34,18 +34,12 @@
                 android:background="@drawable/bg_radiobutton_selector"
                 android:button="@null"
                 android:checked="true"
+                android:drawableRight="@color/common_content_color"
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="聊天"
                 android:textColor="@drawable/tabs_red_color_selector"
                 android:textSize="@dimen/common_content_size_16" />
-
-            <ImageView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/common_content_color" />
 
             <RadioButton
                 android:id="@+id/rb_doc"
@@ -62,13 +56,6 @@
                 android:textSize="@dimen/common_content_size_16" />
 
 
-            <ImageView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/common_content_color" />
-
             <RadioButton
                 android:id="@+id/rb_question"
                 android:layout_width="0dp"
@@ -84,15 +71,6 @@
                 android:textSize="@dimen/common_content_size_16"
                 android:visibility="gone" />
 
-
-            <ImageView
-                android:id="@+id/image_line_show"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/common_content_color"
-                android:visibility="gone" />
 
             <RadioButton
                 android:id="@+id/rb_detail"
@@ -111,42 +89,25 @@
 
         </RadioGroup>
 
-        <LinearLayout
-            android:id="@+id/layout_only_notice"
+        <com.vhall.uilibs.util.ExtendTextView
+            android:id="@+id/tv_notice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f5f5f5"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:clickable="true"
+            android:focusable="true"
+            android:drawableLeft="@drawable/vhall_icon_notice"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/vhall_icon_marquee_close"
+            android:ellipsize="marquee"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="#646464"
+            android:visibility="gone" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:src="@drawable/vhall_icon_notice" />
-
-            <com.vhall.uilibs.util.MarqueeView
-                android:id="@+id/mMarqueeView"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:padding="3dp"
-                app:direction="left"
-                app:isRepeat="true"
-                app:startPoint="end"
-                app:textSize="14sp"
-                app:textcolor="#646464" />
-
-            <ImageView
-                android:id="@+id/image_marquee_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="performMarqueeClose"
-                android:padding="10dp"
-                android:src="@drawable/vhall_icon_marquee_close" />
-
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
