--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ImageView
+    <com.vhall.business.widget.PPTView
         android:id="@+id/iv_doc"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
+        android:layout_height="match_parent" />
 
-    <com.vhall.uilibs.util.WhiteBoardView
+    <com.vhall.business.widget.WhiteBoardView
         android:id="@+id/board"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
