--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_live_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_live_fragment.xml
@@ -11,10 +11,11 @@
         android:layout_height="match_parent"
         android:background="@android:color/black" />
 
-    <master.flame.danmaku.ui.widget.DanmakuView
+    <com.vhall.uilibs.util.DanmuView
         android:id="@+id/sv_danmaku"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -45,88 +46,111 @@
         android:layout_alignParentBottom="true"
         android:background="@color/alpha">
 
-        <ImageView
-            android:id="@+id/click_rtmp_watch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/vhall_icon_live_play" />
-
-        <ImageView
-            android:id="@+id/click_rtmp_orientation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/icon_round_fullscreen" />
-
-        <ImageView
-            android:id="@+id/btn_change_scaletype"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="50dp"
-            android:background="@drawable/fit_default" />
-
-        <ImageView
-            android:id="@+id/btn_change_audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/btn_change_scaletype"
-            android:background="@drawable/audio_close" />
-
-        <ImageView
-            android:id="@+id/btn_danmaku"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/btn_change_audio"
-            />
-
-        <RadioGroup
-            android:id="@+id/radio_choose"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/click_rtmp_watch"
-            android:layout_toRightOf="@+id/click_rtmp_watch"
+            android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/radio_btn_sd"
+            <ImageView
+                android:id="@+id/btn_headtracker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/vhall_icon_resolution_sd"
-                android:button="@null"
-                android:visibility="invisible" />
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/vhall_icon_headtracker_checked" />
 
-            <RadioButton
-                android:id="@+id/radio_btn_hd"
+            <ImageView
+                android:id="@+id/btn_danmaku"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="@drawable/vhall_icon_resolution_hd"
-                android:button="@null"
-                android:visibility="invisible" />
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/vhall_icon_danmaku_close" />
 
-            <RadioButton
-                android:id="@+id/radio_btn_uhd"
+            <ImageView
+                android:id="@+id/btn_change_audio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/vhall_icon_resolution_uhd"
-                android:button="@null"
-                android:visibility="invisible" />
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/audio_close" />
 
-        </RadioGroup>
+            <ImageView
+                android:id="@+id/btn_change_scaletype"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/fit_default" />
+
+            <ImageView
+                android:id="@+id/click_rtmp_orientation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/icon_round_fullscreen" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/click_rtmp_watch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/vhall_icon_live_play" />
+
+
+            <RadioGroup
+                android:id="@+id/radio_choose"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/radio_btn_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/vhall_icon_resolution_sd"
+                    android:button="@null"
+                    android:visibility="visible" />
+
+                <RadioButton
+                    android:id="@+id/radio_btn_hd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/vhall_icon_resolution_hd"
+                    android:button="@null"
+                    android:visibility="invisible" />
+
+                <RadioButton
+                    android:id="@+id/radio_btn_uhd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/vhall_icon_resolution_uhd"
+                    android:button="@null"
+                    android:visibility="invisible" />
+
+            </RadioGroup>
+        </LinearLayout>
 
 
     </RelativeLayout>
