--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray_normal">#9c9ca0</color>
     <color name="red_main">#ff3333</color>
     <color name="red_gray">#f5f5f5</color>
+    <color name="app_background_color">#e2e8eb</color>
 </resources>
