--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
@@ -48,6 +48,12 @@
                 android:text="0kb/s"
                 android:textColor="#e60000" />
 
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="100" />
+
 
         </LinearLayout>
 
