--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/chat_question_item.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/chat_question_item.xml
@@ -24,8 +24,8 @@
             android:id="@+id/iv_question_avatar"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:id="@+id/tv_question_name"
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <View
             android:layout_width="match_parent"
@@ -60,14 +60,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iv_answer_avatar"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/icon_vhall" />
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:layout_marginRight="10dp" />
 
             <TextView
                 android:id="@+id/tv_answer_name"
