--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.vhall.vhalllive.CameraFilterView
+    <com.vhall.vhalllive.pushlive.CameraFilterView
         android:id="@+id/cameraview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
