--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/chat_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/chat_fragment.xml
@@ -4,29 +4,48 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_chat_content"
+    <LinearLayout
+        android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_common_rounded_white_border_gray"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:text="我来说两句"
-        android:textColor="@color/gray_deep"
-        android:textSize="15dp" />
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/text_chat_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/bg_common_rounded_white_border_gray"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="我来说两句"
+            android:textColor="@color/gray_deep"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/test_send_custom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/common_margin_size_5"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_common_rounded_red"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone"
+            android:text="自定义消息"/>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/lv_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/text_chat_content"
+        android:layout_above="@+id/chat_view"
         android:transcriptMode="alwaysScroll"></ListView>
 
 </RelativeLayout>
