--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/drawable/bg_common_rounded_white_border_gray.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/drawable/bg_common_rounded_white_border_gray.xml
@@ -6,8 +6,8 @@
 
     <solid android:color="@color/white" />
 
-    <stroke
-        android:width="0.5dp"
-        android:color="@color/gray_normal"></stroke>
+    <!--<stroke-->
+        <!--android:width="0.5dp"-->
+        <!--android:color="@color/gray_normal"></stroke>-->
 
 </shape>
