--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
@@ -14,5 +14,7 @@
     <color name="red_main">#ff3333</color>
     <color name="red_gray">#f5f5f5</color>
     <color name="app_background_color">#e2e8eb</color>
+    <color name="black_title">#555555</color>
+    <color name="black_text">#222222</color>
 
 </resources>
