--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_activity.xml
@@ -11,9 +11,10 @@
 
     <FrameLayout
         android:id="@+id/chatFrame"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="70dp"/>
 
 </RelativeLayout>
