--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/emoji_inputview_layout.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/emoji_inputview_layout.xml
@@ -2,9 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:background="#00000000"
     android:orientation="vertical">
-
+    <View
+        android:id="@+id/view_bg"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#00000000"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +59,8 @@
         android:id="@+id/vp_emoji"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:background="#ffffff"/>
 
 
 </LinearLayout>
