--- a/VhallAndroidSDKLiveDemo/app/src/main/res/layout/main_activity.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/layout/main_activity.xml
@@ -198,6 +198,17 @@
             android:textColor="@color/white"
             android:textSize="12dp"
             android:onClick="onSetParam" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_set_param"
+            android:text="网页观看"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:onClick="onH5Watch"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
 
