--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
@@ -102,7 +102,7 @@
                 android:background="#f5f5f5"
                 android:clickable="true"
                 android:drawableLeft="@drawable/vhall_icon_notice"
-                android:drawablePadding="10dp"
+                android:drawablePadding="20dp"
                 android:drawableRight="@drawable/vhall_icon_marquee_close"
                 android:ellipsize="marquee"
                 android:focusable="true"
@@ -161,9 +161,13 @@
 
             </RelativeLayout>
 
-
         </LinearLayout>
     </LinearLayout>
 
-
+    <TextView
+        android:id="@+id/tv_online_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="在线人数:0"
+        android:textColor="@color/red_main"/>
 </RelativeLayout>
