--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment_vss.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment_vss.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<RelativeLayout
-    android:id="@+id/rl_doc_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_doc_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
