--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_playback_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_playback_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#000000">
 
-    <SurfaceView
+    <com.vhall.player.vod.VodPlayerView
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
