--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/document_fragment.xml
@@ -15,4 +15,10 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <FrameLayout
+        android:id="@+id/fl_h5_doc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible" />
+
 </RelativeLayout>
