竖屏支持切换播放模式

--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
@@ -41,6 +41,15 @@
 
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/btn_change_scaletype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/fit_default" />
+
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="wrap_content"
